abies-platform/apps/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abies
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
  labels:
    app.kubernetes.io/part-of: abies
